# NPHDAE

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_2004.txt  requirements_2204.txt  setup.sh
configs/: alternator.py  comp_circuits.py  comp_circuits_old.py  coupled_lc.py  dgu.py  lc1.py  lc_circuit.py  mass_spring.py  optuna.py  optuna_lc.py  reuse_model.py  rlc.py
cyrus_experiments/: dae_test.py  lrc_circuit_analytical.py  lrc_circuit_dae_direct_solve.py  lrc_circuit_dae_dynamic_iteration.py  lrc_circuit_index0.py  robertson_problem.py  run_batch_training.py  run_parameter_sweep.sh  run_training.py
dae_solver/: implicit_solvers.py  index1_semi_explicit.py  index1_semi_explicit_flax.py  index1_semi_explicit_random.py  index1_semi_explicit_u.py  radau_IIA.py  radau_IIA_jax.py  test_dae_solver_lib.py  utils.py
environments/: alternator.py  chua.py  coupled_lc_circuit.py  dgu_dae.py  dgu_nonlinear_load.py  dgu_random.py  dgu_triangle_dae.py  double_spring_mass.py  environment.py  fitz_hugh_nagano.py  fitz_hugh_nagumo.py  gridcal_sim.py  lc_circuit.py  microgrid.py  microgrid_complete.py  microgrid_dae.py  n_free_spring.py  n_spring_mass.py  power_network.py  preprocess_data.py  random_env.py  resistor_network.py  rlc.py  rlc_circuit_dae.py  sim.py  switched_double_spring_mass.py  switched_environment.py  test_data.py  transistor.py  utils.py
helpers/: config_factory.py  dataloader.py  graph_builder_factory.py  integrator_factory.py  model_factory.py  optimizer_factories.py  trainer_factories.py  training_config_factory.py
models/: common.py  (+10 more)
(+119 files in other folders)
